# PrepMind-AI

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  5f11859b5348_add_resume_id_to_interviews.py  75b0cfeaa4eb_add_roadmaps_table.py  924f5a4022e9_add_remaining_tables.py
backend/app/: main.py
backend/app/agents/: orchestrator.py  schemas.py  state.py
backend/app/agents/nodes/: decision.py  evaluator.py  question_generator.py  resume_parser.py  weakness_tracker.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  interviews.py  resumes.py  router.py
backend/app/core/: config.py  llm.py  parser.py  security.py  storage.py
backend/app/db/: session.py
backend/app/memory/: vector.py
backend/app/models/: interview.py  resume.py  user.py
backend/app/prompts/: decision.py  evaluate.py  gap_analysis.py  question_generate.py  resume_parse.py  roadmap.py
backend/app/schemas/: auth.py
backend/app/utils/: pdf.py
backend/tests/: conftest.py  test_auth.py  test_interviews.py  test_resumes.py
docs/: 01-architecture.md  02-user-stories-use-cases.md  03-database-schema.md  04-api-design.md  05-folder-structure.md  06-ai-workflows.md  07-ui-pages.md  08-deployment.md  09-future-improvements.md  10-mvp-roadmap.md
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
frontend/src/store/: auth-store.ts
(+15 files in other folders)
